--- a/pages/evnet.html
+++ b/pages/evnet.html
@@ -16,7 +16,7 @@
     .box{
         width: 100px;
         height: 100px;
-        border: 2px solid violet;`
+        border: 2px solid violet;
     }
    </style> 
    <a href="" class="link">클릭해주세요.</a>
