--- a/pages/faq.html
+++ b/pages/faq.html
@@ -6,7 +6,8 @@
     <title>자주 묻는 질문 게시판</title>
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/faq.css" />
-    <script defer src="/js/faq.js"></script>
+    <!--<script defer src="/js/faq.js"></script>-->
+    <script defer src="/js/faq수정.js"></script>
   </head>
   <body>
     <p class="count">총<b></b>개의 게시물이 있습니다.</p>
